<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Viewui.Activity.MainActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorPrimary"
                android:id="@+id/toolbar"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:elevation="4dp" />

            <FrameLayout
                android:layout_weight="1"
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </FrameLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                 android:background="@drawable/button2"
                android:layout_margin="3dp"
                android:id="@+id/zhong"
                android:text="@string/zhong"
                android:textColor="@color/bai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>
            <Button
                android:background="@drawable/button2"
                android:textColor="@color/bai"

                android:layout_margin="3dp"
                android:id="@+id/ying"
                android:text="@string/ying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

            <Button
                android:background="@drawable/button2"
                android:textColor="@color/bai"

                android:layout_margin="3dp"

                android:id="@+id/fayu"
                android:text="@string/fayu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>
        </LinearLayout>


    </RelativeLayout>


<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:id="@+id/main_nav_view"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>