<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@mipmap/logbg"
    android:orientation="vertical"
   >
    <LinearLayout
        android:background="@color/bai"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="10dp"
            android:text="@string/renzheng"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:id="@+id/layout_0"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/main2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namestring"
                android:textStyle="bold" />

            <EditText
                android:textColor="@color/main2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/bai"
                android:id="@+id/et_phone"

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_phone"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>
        <View
            android:background="@color/huise"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>
        <LinearLayout
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/bai"
            android:id="@+id/layout"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/main2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold" />
            <EditText
                android:textColor="@color/main2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/bai"
                android:id="@+id/et_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_phone"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>
        <View
            android:background="@color/huise"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>
        <LinearLayout
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/bai"
            android:id="@+id/layout_1"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/main2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textStyle="bold" />

            <EditText
                android:textColor="@color/main2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/bai"
                android:id="@+id/et_pwd2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_phone"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>
        <View
            android:background="@color/huise"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>
        <RadioGroup
            android:visibility="gone"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/usertypestirng"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/ptyonghu"
                android:text="用户"
                android:textSize="10sp"
                android:background="@drawable/radioyangshi"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:button="@null"
                android:checked="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <RadioButton
                android:id="@+id/guanfang"
                android:text="官方"
                android:textSize="10sp"
                android:background="@drawable/radioyangshi"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:button="@null"
                android:checked="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <RadioButton

                android:id="@+id/glyonghu"
                android:text="管理"
                android:textSize="10sp"
                android:background="@drawable/radioyangshi"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:button="@null"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </RadioGroup>
    </LinearLayout>

  <LinearLayout
      android:layout_margin="40dp"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
>
      <TextView
          android:id="@+id/tv_login"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:background="@drawable/button2"
          android:gravity="center"
          android:text="@string/a7"
          android:textColor="#fff"
          android:textSize="20sp" />

  </LinearLayout>


</LinearLayout>